<resources>
    <string name="app_name">Rentdoo</string>
    <string name="text_accounts">All Roommates</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
	<string name="hint_number">Phone Number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_number">Enter a Valid number</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? <u>Create One</u> </string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Rentdoo</string>
    <string name="pref_testTitleDiv">Test Settings Div</string>
    <string name="pref_testCheckbox1">Checkbox 1</string>
    <string name="pref_testCheckbox1_summ">Checkbox 1 description</string>
    <string name="pref_testList1">List 1</string>
    <string name="pref_testList1_default">list 1 default</string>
    <string name="pref_testList2">list 2</string>
    <string name="pref_testList2_default">list 2 default</string>
    <string name="pref_testList3">list 3</string>
    <string name="pref_testList3_default">list 3 default</string>
    <string name="billName">Bill</string>
    <string name="billAmount">$XXX</string>
    <string name="user_payment">Payment due</string>
    <string name="paymentAmount">$YYYY</string>
    <string name="text_bills">Bills</string>
    <string name="text_chores">Chores</string>
    <string name="choreName">Chore</string>
    <string name="notice">Notice</string>
    <string name="text_notice">Notices</string>
    <string name ="hint_role">Role</string>
    <string name ="hint_rent">Rent</string>
    <string name ="rentDetail">User Information</string>
    <string name = "hint_phone">Phone</string>
    <string name="holder_payment">Payments</string>
    <string name="text_payments">Payments</string>
    <string name="billUsername">James</string>
    <string name="paymentTotal">Total</string>
    <string name="paymentBillUsername">James</string>
    <string name="editButtonDefault">Edit Users</string>
    <string name="text_tenants">Tenants</string>
    <string name="tenant">Tenant_Name</string>
    <string name="action_logout">Logout</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About us</string>
    <string name="privacy_policy">Privacy</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_bills">Bills</string>
    <string name="action_chores">Chores</string>
    <string name="action_notices">Notices</string>
    <string name="action_users_list">Users List</string>
    <string name="hint_chores">Chores</string>
    <string name="rules">Rules</string>
    <string name="action_rules">House Rules</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="choreAssigned">Name</string>
</resources>
